preparing to release to chrome webstore

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,9 @@
   "manifest_version": 3,
   "name": "LinkStack",
   "version": "1.0.0",
-  "description": "Save and sync your links with GitHub",
+  "description": "Save and sync your links with GitHub. Organize your bookmarks with tags and access them anywhere through your GitHub repository.",
+  "author": "hp77",
+  "homepage_url": "https://github.com/hp77-creator/linkstack-extension",
   "permissions": [
     "activeTab",
     "storage",
